--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "      <td>0</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
-       "      <td>0.005530</td>\n",
+       "      <td>0.003015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1103,7 +1103,7 @@
        "      <td>0</td>\n",
        "      <td>6</td>\n",
        "      <td>11</td>\n",
-       "      <td>0.000155</td>\n",
+       "      <td>0.002505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1143,7 +1143,7 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.002899</td>\n",
+       "      <td>0.000351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1183,7 +1183,7 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
-       "      <td>0.000865</td>\n",
+       "      <td>0.000354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1223,7 +1223,7 @@
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.002161</td>\n",
+       "      <td>0.007055</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1280,27 +1280,27 @@
        "4              0                 0        0          0     0             0   \n",
        "\n",
        "   wheelchair_access  common_outdoor_space  month  amenities  Manhattan_norm  \n",
-       "0                  0                     0      6          6        0.005530  \n",
-       "1                  0                     0      6         11        0.000155  \n",
-       "2                  0                     0      4          7        0.002899  \n",
-       "3                  0                     0      4          6        0.000865  \n",
-       "4                  0                     0      4          5        0.002161  "
+       "0                  0                     0      6          6        0.003015  \n",
+       "1                  0                     0      6         11        0.002505  \n",
+       "2                  0                     0      4          7        0.000351  \n",
+       "3                  0                     0      4          6        0.000354  \n",
+       "4                  0                     0      4          5        0.007055  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Second feature - Distance from Manhattan.\n",
-    "df['Manhattan_norm'] = ((df['latitude']-40.7831)**2)+((df['longitude']-(-73.9712))**2)\n",
+    "# Second feature - Distance from the Empire State Building.\n",
+    "df['Manhattan_norm'] = ((df['latitude']-40.7484)**2)+((df['longitude']-(-73.9857))**2)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,16 +1343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2972.9542843])"
+       "array([2894.49586961])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,15 +1363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  1926.86453951    406.87602248     70.10880205 -50250.07385641]\n",
-      "159.67659798866134\n"
+      "[ 1.91199194e+03  4.27372382e+02  5.53878211e+01 -8.61589743e+04]\n",
+      "327.27918829551663\n"
      ]
     }
    ],
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1402,16 +1402,16 @@
      "output_type": "stream",
      "text": [
       "MAE\n",
-      "train 777.3971431854172\n",
-      "test 799.5833712524426\n",
+      "train 733.5286433376626\n",
+      "test 754.3646757165781\n",
       "_________________\n",
       "RMSE\n",
-      "train 1173.3014669712215\n",
-      "test 1165.0406441540576\n",
+      "train 1135.1247728551327\n",
+      "test 1123.887706160855\n",
       "__________________\n",
       "R^2\n",
-      "train 0.5566568116461954\n",
-      "test 0.5629258390264477\n"
+      "train 0.5850382978355899\n",
+      "test 0.5932581865696791\n"
      ]
     }
    ],
