--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "1990                  0                     0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "4                  0                     0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "4                  0                     0      4          5  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
        "4                  0                     0      4          5        0.007055  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
        "array([2894.49586961])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1438,17 +1438,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Some feature optimization? Why not.\n",
+    "# Two gradient descents, one for lat and one for long.\n",
+    "df2 = df.copy()\n",
+    "latmin = df2['latitude'].min()\n",
+    "latmax = df2['latitude'].max()\n",
+    "bounddict = {\n",
+    "    'lowbound': latmin,\n",
+    "    'midbound': ((latmin+latmax)/2),\n",
+    "    'upbound': latmax\n",
+    "}\n",
+    "\n",
+    "for i in range(1,100):\n",
+    "    bounderrors={}\n",
+    "    # Set the central value according to the bounds\n",
+    "    bounddict['midbound'] = (bounddict['lowbound']+bounddict['upbound'])/2\n",
+    "    for key,value in bounddict.items():\n",
+    "        # Set the feature's parameter to the bound we're testing\n",
+    "        df2['Manhattan_norm'] = ((df2['latitude']-value)**2)+((df2['longitude']-(-73.9857))**2)\n",
+    "        \n",
+    "        # Split the data\n",
+    "        train2 = df2[(df2['month'] == 4) | (df2['month'] == 5)]\n",
+    "        test2 = df2[df2['month'] == 6]\n",
+    "        \n",
+    "        # Instantiate X and y for train and test.\n",
+    "        X_train2 = train2[features]\n",
+    "        y_train2 = train2[target]\n",
+    "        X_test2 = test2[features]\n",
+    "        y_test2 = test2[target]\n",
+    "\n",
+    "        # Instantiate and fit model\n",
+    "        model2 = LinearRegression()\n",
+    "        model2.fit(X_train2,y_train2)\n",
+    "        \n",
+    "        # Predictions for train and test\n",
+    "        y_pred_train2 = model2.predict(X_train2)\n",
+    "        y_pred_test2 = model2.predict(X_test2)\n",
+    "        \n",
+    "        # Get the error for the value\n",
+    "        bounderrors[key] = mean_absolute_error(y_test2, y_pred_test2)\n",
+    "    #Eliminate whichever extremal bound is worse\n",
+    "    if bounderrors['lowbound'] > bounderrors['upbound']:\n",
+    "        bounddict['lowbound'] = bounddict['midbound']\n",
+    "    else:\n",
+    "        bounddict['upbound'] = bounddict['midbound']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lowbound': 40.73083749999999, 'midbound': 40.73083749999999, 'upbound': 40.7308375}\n",
+      "{'lowbound': 751.5013702136258, 'midbound': 751.5013702136258, 'upbound': 751.5013702136243}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bounddict)\n",
+    "print(bounderrors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Our top bound is the best one, we'll set the parameter in Manhattan_norm accordingly.\n",
+    "df2['Manhattan_norm'] = ((df2['latitude']-40.7308375)**2)+((df2['longitude']-(-73.9857))**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same story for the longitude.\n",
+    "\n",
+    "longmin = df2['longitude'].min()\n",
+    "longmax = df2['longitude'].max()\n",
+    "bounddict = {\n",
+    "    'lowbound': longmin,\n",
+    "    'midbound': ((longmin+longmax)/2),\n",
+    "    'upbound': longmax\n",
+    "}\n",
+    "\n",
+    "for i in range(1,100):\n",
+    "    bounderrors={}\n",
+    "    # Set the central value according to the bounds\n",
+    "    bounddict['midbound'] = (bounddict['lowbound']+bounddict['upbound'])/2\n",
+    "    for key,value in bounddict.items():\n",
+    "        # Set the feature's parameter to the bound we're testing\n",
+    "        df2['Manhattan_norm'] = ((df2['latitude']-40.7308375)**2)+((df2['longitude']-(value))**2)\n",
+    "        \n",
+    "        # Split the data\n",
+    "        train2 = df2[(df2['month'] == 4) | (df2['month'] == 5)]\n",
+    "        test2 = df2[df2['month'] == 6]\n",
+    "        \n",
+    "        # Instantiate X and y for train and test.\n",
+    "        X_train2 = train2[features]\n",
+    "        y_train2 = train2[target]\n",
+    "        X_test2 = test2[features]\n",
+    "        y_test2 = test2[target]\n",
+    "\n",
+    "        # Instantiate and fit model\n",
+    "        model2 = LinearRegression()\n",
+    "        model2.fit(X_train2,y_train2)\n",
+    "        \n",
+    "        # Predictions for train and test\n",
+    "        y_pred_train2 = model2.predict(X_train2)\n",
+    "        y_pred_test2 = model2.predict(X_test2)\n",
+    "        \n",
+    "        # Get the error for the value\n",
+    "        bounderrors[key] = mean_absolute_error(y_test2, y_pred_test2)\n",
+    "    #Eliminate whichever extremal bound is worse\n",
+    "    if bounderrors['lowbound'] > bounderrors['upbound']:\n",
+    "        bounddict['lowbound'] = bounddict['midbound']\n",
+    "    else:\n",
+    "        bounddict['upbound'] = bounddict['midbound']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'lowbound': -74.0873, 'midbound': -74.0873, 'upbound': -74.0873}\n",
+      "{'lowbound': 735.149870776109, 'midbound': 735.149870776109, 'upbound': 735.149870776109}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bounddict)\n",
+    "print(bounderrors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-74.0873"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Nice convergence. This is the same as the minimum longitude, looks like west is better.\n",
+    "longmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Take it from the top with our original dataframe.\n",
+    "\n",
+    "# Set the feature's parameter to the bound we're testing\n",
+    "df['Manhattan_norm'] = ((df['latitude']-40.7308375)**2)+((df['longitude']-(-74.0873))**2)\n",
+    "        \n",
+    "# Split the data\n",
+    "train = df[(df['month'] == 4) | (df['month'] == 5)]\n",
+    "test = df[df['month'] == 6]\n",
+    "        \n",
+    "# Instantiate X and y for train and test.\n",
+    "X_train = train[features]\n",
+    "y_train = train[target]\n",
+    "X_test = test[features]\n",
+    "y_test = test[target]\n",
+    "\n",
+    "# Instantiate and fit model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train,y_train)\n",
+    "        \n",
+    "# Predictions for train and test\n",
+    "y_pred_train = model.predict(X_train)\n",
+    "y_pred_test = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE\n",
+      "train 715.1666892327796\n",
+      "test 735.149870776109\n",
+      "_________________\n",
+      "RMSE\n",
+      "train 1122.1096041822725\n",
+      "test 1112.2829323264618\n",
+      "__________________\n",
+      "R^2\n",
+      "train 0.5944995206321873\n",
+      "test 0.6016144976863145\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Error metrics - MAE, RMSE, R^2\n",
+    "\n",
+    "# MAE\n",
+    "print('MAE')\n",
+    "print('train',mean_absolute_error(y_train, y_pred_train))\n",
+    "print('test',mean_absolute_error(y_test, y_pred_test))\n",
+    "print('_________________')\n",
+    "\n",
+    "# RMSE\n",
+    "print('RMSE')\n",
+    "print('train',np.sqrt(mean_squared_error(y_train, y_pred_train)))\n",
+    "print('test',np.sqrt(mean_squared_error(y_test, y_pred_test)))\n",
+    "print('__________________')\n",
+    "\n",
+    "#R^2\n",
+    "print('R^2')\n",
+    "print('train',r2_score(y_train, y_pred_train))\n",
+    "print('test',r2_score(y_test, y_pred_test))"
+   ]
   }
  ],
  "metadata": {
