--- a/Bethany_assignment_regression_classification_4.ipynb
+++ b/Bethany_assignment_regression_classification_4.ipynb
@@ -2290,6 +2290,20 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iyZ2-G8bP283",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import files\n",
+        "files.download('submission-01.csv')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
