--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -610,6 +610,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_kvNic4HjwZu",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Y0ncXf62POxL",
@@ -700,13 +710,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fiud4oDeaxt6",
         "colab_type": "code",
+        "outputId": "de645dfd-5214-45a2-cd5b-5f4ff38839f0",
+        "id": "zk-rP-37j3fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "de645dfd-5214-45a2-cd5b-5f4ff38839f0"
+        }
       },
       "source": [
         "# get the coefficient(s) and intercept\n",
@@ -719,7 +729,7 @@
         "\n",
         "y_pred = model.predict(X)"
       ],
-      "execution_count": 73,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,9 +749,9 @@
         "colab": {}
       },
       "source": [
-        "# df['Predicted'] = y_pred\n",
-        "# df['Error'] = y_pred - y\n",
-        "# df.head()"
+        "df['Predicted'] = y_pred\n",
+        "df['Error'] = y_pred - y\n",
+        "df.head()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -848,6 +858,67 @@
             "tags": []
           },
           "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zZ6X-eu6kEoC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "d1a5290f-bc7a-4c83-fe1d-29cea6044305"
+      },
+      "source": [
+        "# select the features\n",
+        "features = ['bedrooms', 'bathrooms', 'pets_allowed', \n",
+        "            'laundry_in_unit', 'dishwasher', 'fitness_center', 'elevator']\n",
+        "target = 'price'\n",
+        "\n",
+        "# set the X, y\n",
+        "X = train[features]\n",
+        "y = train[target]\n",
+        "\n",
+        "X_test = test[features]\n",
+        "y_test = test[target]\n",
+        "\n",
+        "# instantiate the model and fit it to the variables\n",
+        "model = LinearRegression()\n",
+        "model.fit(X, y)\n",
+        "\n",
+        "# get the coefficient(s) and intercept\n",
+        "print('Coefficient: ', model.coef_)\n",
+        "print('Intercept: ', model.intercept_)\n",
+        "\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "rmse = np.sqrt(mse)\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "\n",
+        "print('Mean Absolute Error:', mae)\n",
+        "print('Mean Squared Error:', mse)\n",
+        "print('Root Mean Squared Error:', rmse)\n",
+        "print('R Squared:', r2)"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Coefficient:  [ 413.28751281 1864.26933338   98.29851106  493.03351661   -2.67608237\n",
+            "  333.72415376  343.66604798]\n",
+            "Intercept:  295.81157888625285\n",
+            "Mean Absolute Error: 784.209973467135\n",
+            "Mean Squared Error: 1377670.4030881482\n",
+            "Root Mean Squared Error: 1173.742051341839\n",
+            "R Squared: 0.5567371377609562\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
