Update module 1 notebook

--- a/module1/lesson_regression_classification_1.ipynb
+++ b/module1/lesson_regression_classification_1.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "- Begin with baselines for regression\n",
     "- Use scikit-learn to fit a linear regression\n",
-    "- Make new predictions and explain coefficients"
+    "- Explain the coefficients from a linear regression"
    ]
   },
   {
