Update module 2-4 notebooks & data

--- a/module4/assignment_regression_classification_4.ipynb
+++ b/module4/assignment_regression_classification_4.ipynb
@@ -11,84 +11,122 @@
     "\n",
     "# Regression & Classification, Module 4\n",
     "\n",
+    "\n",
     "## Assignment\n",
     "\n",
-    "- [ ] Watch Aaron Gallant's [video #1](https://www.youtube.com/watch?v=pREaWFli-5I) (12 minutes) & [video #2](https://www.youtube.com/watch?v=bDQgVt4hFgY) (9 minutes) to learn about the mathematics of Logistic Regression.\n",
+    "- [ ] Watch Aaron's [video #1](https://www.youtube.com/watch?v=pREaWFli-5I) (12 minutes) & [video #2](https://www.youtube.com/watch?v=bDQgVt4hFgY) (9 minutes) to learn about the mathematics of Logistic Regression.\n",
+    "- [ ] [Sign up for a Kaggle account](https://www.kaggle.com/), if you don’t already have one. Go to our Kaggle InClass competition website. You will be given the URL in Slack. Go to the Rules page. Accept the rules of the competition.\n",
     "- [ ] Do train/validate/test split with the Tanzania Waterpumps data.\n",
-    "- [ ] Do one-hot encoding. For example, in addition to `quantity`, you could try `basin`, `extraction_type_class`, and more. (But remember it may not work with high cardinality categoricals.)\n",
+    "- [ ] Begin with baselines for classification.\n",
     "- [ ] Use scikit-learn for logistic regression.\n",
     "- [ ] Get your validation accuracy score.\n",
-    "- [ ] Get and plot your coefficients.\n",
     "- [ ] Submit your predictions to our Kaggle competition. (Go to our Kaggle InClass competition webpage. Use the blue **Submit Predictions** button to upload your CSV file. Or you can use the Kaggle API to submit your predictions.)\n",
     "- [ ] Commit your notebook to your fork of the GitHub repo.\n",
     "\n",
-    "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
+    "---\n",
     "\n",
     "\n",
     "## Stretch Goals\n",
     "\n",
-    "### Doing\n",
     "- [ ] Add your own stretch goal(s) !\n",
     "- [ ] Clean the data. For ideas, refer to [The Quartz guide to bad data](https://github.com/Quartz/bad-data-guide),  a \"reference to problems seen in real-world data along with suggestions on how to resolve them.\" One of the issues is [\"Zeros replace missing values.\"](https://github.com/Quartz/bad-data-guide#zeros-replace-missing-values)\n",
     "- [ ] Make exploratory visualizations.\n",
+    "- [ ] Do one-hot encoding. For example, you could try `quantity`, `basin`, `extraction_type_class`, and more. (But remember it may not work with high cardinality categoricals.)\n",
     "- [ ] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
+    "- [ ] Get and plot your coefficients.\n",
     "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html).\n",
     "\n",
+    "---\n",
     "\n",
-    "#### Exploratory visualizations\n",
+    "## Data Dictionary \n",
     "\n",
-    "Visualize the relationships between feature(s) and target. I recommend you do this with your training set, after splitting your data. \n",
+    "### Features\n",
     "\n",
-    "To visualize this dataset, you may want to create a new column to represent the target as a number, 0 or 1. For example:\n",
+    "Your goal is to predict the operating condition of a waterpoint for each record in the dataset. You are provided the following set of information about the waterpoints:\n",
+    "\n",
+    "- `amount_tsh` : Total static head (amount water available to waterpoint)\n",
+    "- `date_recorded` : The date the row was entered\n",
+    "- `funder` : Who funded the well\n",
+    "- `gps_height` : Altitude of the well\n",
+    "- `installer` : Organization that installed the well\n",
+    "- `longitude` : GPS coordinate\n",
+    "- `latitude` : GPS coordinate\n",
+    "- `wpt_name` : Name of the waterpoint if there is one\n",
+    "- `num_private` :  \n",
+    "- `basin` : Geographic water basin\n",
+    "- `subvillage` : Geographic location\n",
+    "- `region` : Geographic location\n",
+    "- `region_code` : Geographic location (coded)\n",
+    "- `district_code` : Geographic location (coded)\n",
+    "- `lga` : Geographic location\n",
+    "- `ward` : Geographic location\n",
+    "- `population` : Population around the well\n",
+    "- `public_meeting` : True/False\n",
+    "- `recorded_by` : Group entering this row of data\n",
+    "- `scheme_management` : Who operates the waterpoint\n",
+    "- `scheme_name` : Who operates the waterpoint\n",
+    "- `permit` : If the waterpoint is permitted\n",
+    "- `construction_year` : Year the waterpoint was constructed\n",
+    "- `extraction_type` : The kind of extraction the waterpoint uses\n",
+    "- `extraction_type_group` : The kind of extraction the waterpoint uses\n",
+    "- `extraction_type_class` : The kind of extraction the waterpoint uses\n",
+    "- `management` : How the waterpoint is managed\n",
+    "- `management_group` : How the waterpoint is managed\n",
+    "- `payment` : What the water costs\n",
+    "- `payment_type` : What the water costs\n",
+    "- `water_quality` : The quality of the water\n",
+    "- `quality_group` : The quality of the water\n",
+    "- `quantity` : The quantity of water\n",
+    "- `quantity_group` : The quantity of water\n",
+    "- `source` : The source of the water\n",
+    "- `source_type` : The source of the water\n",
+    "- `source_class` : The source of the water\n",
+    "- `waterpoint_type` : The kind of waterpoint\n",
+    "- `waterpoint_type_group` : The kind of waterpoint\n",
+    "\n",
+    "### Labels\n",
+    "\n",
+    "There are three possible values:\n",
+    "\n",
+    "- `functional` : the waterpoint is operational and there are no repairs needed\n",
+    "- `functional needs repair` : the waterpoint is operational, but needs repairs\n",
+    "- `non functional` : the waterpoint is not operational\n",
+    "\n",
+    "--- \n",
+    "\n",
+    "## Generate a submission\n",
+    "\n",
+    "Your code to generate a submission file may look like this:\n",
     "\n",
     "```python\n",
-    "train['functional'] = (train['status_group']=='functional').astype(int)\n",
+    "# estimator is your model or pipeline, which you've fit on X_train\n",
+    "\n",
+    "# X_test is your pandas dataframe or numpy array, \n",
+    "# with the same number of rows, in the same order, as test_features.csv, \n",
+    "# and the same number of columns, in the same order, as X_train\n",
+    "\n",
+    "y_pred = estimator.predict(X_test)\n",
+    "\n",
+    "\n",
+    "# Makes a dataframe with two columns, id and status_group, \n",
+    "# and writes to a csv file, without the index\n",
+    "\n",
+    "sample_submission = pd.read_csv('sample_submission.csv')\n",
+    "submission = sample_submission.copy()\n",
+    "submission['status_group'] = y_pred\n",
+    "submission.to_csv('your-submission-filename.csv', index=False)\n",
     "```\n",
     "\n",
+    "If you're working locally, the csv file is saved in the same directory as your notebook.\n",
     "\n",
-    "\n",
-    "You can try [Seaborn \"Categorical estimate\" plots](https://seaborn.pydata.org/tutorial/categorical.html) for features with reasonably few unique values. (With too many unique values, the plot is unreadable.)\n",
-    "\n",
-    "- Categorical features. (If there are too many unique values, you can replace less frequent values with \"OTHER.\")\n",
-    "- Numeric features. (If there are too many unique values, you can [bin with pandas cut / qcut functions](https://pandas.pydata.org/pandas-docs/stable/getting_started/basics.html?highlight=qcut#discretization-and-quantiling).)\n",
-    "\n",
-    "You can try [Seaborn linear model plots](https://seaborn.pydata.org/tutorial/regression.html) with numeric features. For this problem, you may want to use the parameter `logistic=True`\n",
-    "\n",
-    "You do _not_ need to use Seaborn, but it's nice because it includes confidence intervals to visualize uncertainty.\n",
-    "\n",
-    "#### High-cardinality categoricals\n",
-    "\n",
-    "This code from the previous assignment demonstrates how to replace less frequent values with 'OTHER'\n",
+    "If you're using Google Colab, you can use this code to download your submission csv file.\n",
     "\n",
     "```python\n",
-    "# Reduce cardinality for NEIGHBORHOOD feature ...\n",
-    "\n",
-    "# Get a list of the top 10 neighborhoods\n",
-    "top10 = train['NEIGHBORHOOD'].value_counts()[:10].index\n",
-    "\n",
-    "# At locations where the neighborhood is NOT in the top 10,\n",
-    "# replace the neighborhood with 'OTHER'\n",
-    "train.loc[~train['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'\n",
-    "test.loc[~test['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'\n",
+    "from google.colab import files\n",
+    "files.download('your-submission-filename.csv')\n",
     "```\n",
     "\n",
-    "#### Pipelines\n",
-    "\n",
-    "[Scikit-Learn User Guide](https://scikit-learn.org/stable/modules/compose.html) explains why pipelines are useful, and demonstrates how to use them:\n",
-    "\n",
-    "> Pipeline can be used to chain multiple estimators into one. This is useful as there is often a fixed sequence of steps in processing the data, for example feature selection, normalization and classification. Pipeline serves multiple purposes here:\n",
-    "> - **Convenience and encapsulation.** You only have to call fit and predict once on your data to fit a whole sequence of estimators.\n",
-    "> - **Joint parameter selection.** You can grid search over parameters of all estimators in the pipeline at once.\n",
-    "> - **Safety.** Pipelines help avoid leaking statistics from your test data into the trained model in cross-validation, by ensuring that the same samples are used to train the transformers and predictors.\n",
-    "\n",
-    "### Reading\n",
-    "- [ ] [Why is logistic regression considered a linear model?](https://www.quora.com/Why-is-logistic-regression-considered-a-linear-model)\n",
-    "- [ ] [Training, Validation, and Testing Data Sets](https://end-to-end-machine-learning.teachable.com/blog/146320/training-validation-testing-data-sets)\n",
-    "- [ ] [How (and why) to create a good validation set](https://www.fast.ai/2017/11/13/validation-sets/)\n",
-    "- [ ] [Always start with a stupid model, no exceptions](https://blog.insightdatascience.com/always-start-with-a-stupid-model-no-exceptions-3a22314b9aaa)\n",
-    "- [ ] [Statistical Modeling: The Two Cultures](https://projecteuclid.org/download/pdf_1/euclid.ss/1009213726)\n",
-    "- [ ] [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way (without an excessive amount of formulas or academic pre-requisites).\n",
-    "\n"
+    "---"
    ]
   },
   {
@@ -145,6 +183,12 @@
    },
    "outputs": [],
    "source": [
+    "# Read the Tanzania Waterpumps data\n",
+    "# train_features.csv : the training set features\n",
+    "# train_labels.csv : the training set labels\n",
+    "# test_features.csv : the test set features\n",
+    "# sample_submission.csv : a sample submission file in the correct format\n",
+    "    \n",
     "import pandas as pd\n",
     "\n",
     "train_features = pd.read_csv('../data/waterpumps/train_features.csv')\n",
