--- a/module3/assignment_regression_classification_3.ipynb
+++ b/module3/assignment_regression_classification_3.ipynb
@@ -17,24 +17,25 @@
     "\n",
     "But not just for condos in Tribeca...\n",
     "\n",
-    "Instead, predict property sales prices for **One Family Dwellings** (`BUILDING_CLASS_CATEGORY` == `'01 ONE FAMILY DWELLINGS'`) using a subset of the data where the **sale price was more than \\\\$100 thousand and less than $2 million.** \n",
+    "Instead, predict property sales prices for **One Family Dwellings** (`BUILDING_CLASS_CATEGORY` == `'01 ONE FAMILY DWELLINGS'`). \n",
+    "\n",
+    "Use a subset of the data where the **sale price was more than \\\\$100 thousand and less than $2 million.** \n",
     "\n",
     "The [NYC Department of Finance](https://www1.nyc.gov/site/finance/taxes/property-rolling-sales-data.page) has a glossary of property sales terms and NYC Building Class Code Descriptions. The data comes from the [NYC OpenData](https://data.cityofnewyork.us/browse?q=NYC%20calendar%20sales) portal.\n",
     "\n",
-    "\n",
     "- [ ] Do train/test split. Use data from January — March 2019 to train. Use data from April 2019 to test.\n",
-    "- [ ] Do exploratory visualizations with Seaborn.\n",
     "- [ ] Do one-hot encoding of categorical features.\n",
     "- [ ] Do feature selection with `SelectKBest`.\n",
-    "- [ ] Fit a linear regression model with multiple features.\n",
+    "- [ ] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
+    "- [ ] Fit a ridge regression model with multiple features.\n",
     "- [ ] Get mean absolute error for the test set.\n",
     "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
     "\n",
     "\n",
     "## Stretch Goals\n",
     "- [ ] Add your own stretch goal(s) !\n",
-    "- [ ] Try [`RidgeCV`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html) instead of Linear Regression, especially if your errors blow up! Watch [Aaron Gallant's 9 minute video on Ridge Regression](https://www.youtube.com/watch?v=XK5jkedy17w) to learn more.\n",
-    "- [ ] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
+    "- [ ] Instead of `RidgeRegression`, try `LinearRegression`. Depending on how many features you select, your errors will probably blow up! 💥\n",
+    "- [ ] Instead of `RidgeRegression`, try [`RidgeCV`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html).\n",
     "- [ ] Learn more about feature selection:\n",
     "    - [\"Permutation importance\"](https://www.kaggle.com/dansbecker/permutation-importance)\n",
     "    - [scikit-learn's User Guide for Feature Selection](https://scikit-learn.org/stable/modules/feature_selection.html)\n",
@@ -42,16 +43,8 @@
     "    - scikit-learn-contrib libraries: [boruta_py](https://github.com/scikit-learn-contrib/boruta_py) & [stability-selection](https://github.com/scikit-learn-contrib/stability-selection)\n",
     "    - [_Feature Engineering and Selection_](http://www.feat.engineering/) by Kuhn & Johnson.\n",
     "- [ ] Try [statsmodels](https://www.statsmodels.org/stable/index.html) if you’re interested in more inferential statistical approach to linear regression and feature selection, looking at p values and 95% confidence intervals for the coefficients.\n",
-    "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way (without an excessive amount of formulas or academic pre-requisites).\n",
-    "(That book is good regardless of whether your cultural worldview is inferential statistics or predictive machine learning)\n",
-    "- [ ] Read Leo Breiman's paper, [\"Statistical Modeling: The Two Cultures\"](https://projecteuclid.org/download/pdf_1/euclid.ss/1009213726)\n",
-    "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html):\n",
-    "\n",
-    "> Pipeline can be used to chain multiple estimators into one. This is useful as there is often a fixed sequence of steps in processing the data, for example feature selection, normalization and classification. Pipeline serves multiple purposes here:\n",
-    "\n",
-    "> - **Convenience and encapsulation.** You only have to call fit and predict once on your data to fit a whole sequence of estimators.\n",
-    "> - **Joint parameter selection.** You can grid search over parameters of all estimators in the pipeline at once.\n",
-    "> - **Safety.** Pipelines help avoid leaking statistics from your test data into the trained model in cross-validation, by ensuring that the same samples are used to train the transformers and predictors."
+    "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way.\n",
+    "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
    ]
   },
   {
@@ -112,7 +105,7 @@
     "import pandas_profiling\n",
     "\n",
     "# Read New York City property sales data\n",
-    "df = pd.read_csv('../data/NYC_Citywide_Rolling_Calendar_Sales.csv')\n",
+    "df = pd.read_csv('../data/condos/NYC_Citywide_Rolling_Calendar_Sales.csv')\n",
     "\n",
     "# Change column names: replace spaces with underscores\n",
     "df.columns = [col.replace(' ', '_') for col in df]\n",
@@ -127,6 +120,40 @@
     "    .astype(int)\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BOROUGH is a numeric column, but arguably should be a categorical feature,\n",
+    "# so convert it from a number to a string\n",
+    "df['BOROUGH'] = df['BOROUGH'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reduce cardinality for NEIGHBORHOOD feature\n",
+    "\n",
+    "# Get a list of the top 10 neighborhoods\n",
+    "top10 = df['NEIGHBORHOOD'].value_counts()[:10].index\n",
+    "\n",
+    "# At locations where the neighborhood is NOT in the top 10, \n",
+    "# replace the neighborhood with 'OTHER'\n",
+    "df.loc[~df['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
