Update module 3 lesson notebook

--- a/module3/lesson_regression_classification_3.ipynb
+++ b/module3/lesson_regression_classification_3.ipynb
@@ -28,7 +28,14 @@
    "source": [
     "### Setup\n",
     "\n",
-    "You can work locally (follow the [local setup instructions](https://lambdaschool.github.io/ds/unit2/local/)) or on Colab (run the code cell below)."
+    "You can work locally (follow the [local setup instructions](https://lambdaschool.github.io/ds/unit2/local/)) or on Colab (run the code cell below).\n",
+    "\n",
+    "Libraries:\n",
+    "- category_encoders 2.0.0\n",
+    "- matplotlib\n",
+    "- numpy\n",
+    "- pandas\n",
+    "- scikit-learn"
    ]
   },
   {
@@ -395,7 +402,6 @@
    "outputs": [],
    "source": [
     "# How many features do we have currently?\n",
-    "target = 'price'\n",
     "features = X_train.columns\n",
     "n = len(features)\n",
     "n"
@@ -445,6 +451,7 @@
    "outputs": [],
    "source": [
     "# Select the 15 features that best correlate with the target\n",
+    "# (15 is an arbitrary starting point here)\n",
     "from sklearn.feature_selection import f_regression, SelectKBest\n",
     "\n",
     "# Similar API to what we've seen before\n",
